--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.2.1",
+    "@huggingface/inference": "^2.6.4",
     "@paypal/react-paypal-js": "^8.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
