--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.294.0",
     "mammoth": "^1.6.0",
     "next": "14.0.0",
+    "node-fetch": "^2.7.0",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.12",
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
